# armour

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  REPRODUCE.md  SECURITY.md  pyproject.toml
armour_labs/: __init__.py  adapters.py  adjudication.py  classifier.py  cli.py  dataset.py  eval_catalog.py  evals.py  external_gate.py  judge_baseline.py  judge_comparison.py  live_external.py  local_agent.py  metrics.py  model_agent.py  model_api.py  model_judge.py  monitors.py  outcome_state.py  policy_packs.py  provenance.py  replay.py  reviewed_fixtures.py  reviewer_campaign.py  reviewer_intake.py  reviewer_packet.py  reviewer_responses.py  runner.py  schemas.py  simulator.py
benchmarks/: README.md  model_claim_judge_comparison.json  model_claim_judge_comparison.md  outcome_state_model_claim_candidates.json  outcome_state_model_claim_candidates.md
datasets/: README.md  adjudication_queue_v3.jsonl  live_external_agent_runs.jsonl  local_agent_labeled_traces.jsonl  model_agent_claim_candidates.jsonl  model_agent_run_plan.json  model_agent_runs.jsonl  reviewed_external_agent_traces.jsonl
docs/: ADJUDICATION_WORKFLOW.md  BENCHMARK_CARD.md  CLAUDE_AGENT_EVALS.md  INTEGRATIONS.md  JUDGE_BASELINES.md  LABELING_GUIDE.md  MODEL_BACKED_RUNS.md  POLICY_PACKS.md  REPRESENTATIVE_TRACES.md  SAFETY_CASE.md  TRACE_EVIDENCE_MANIFEST.md  TRACE_SCHEMA.md
examples/: README.md
review/: anonymous_external_reviewer_responses.csv  reviewer_adjudication.json  reviewer_adjudication.md
scripts/: check_no_secrets.py  generate_benchmark_report.py  generate_benchmark_v1.py  (+11 more)
(+25 files in other folders)
